Refactoring: Rename assets to snake_case and update references

--- a/core/data/main/gallery/index_de2.html
+++ b/core/data/main/gallery/index_de2.html
@@ -370,46 +370,46 @@
     <script>
         // Image data
         const images = [
-            { num: 1, thumb: 'Die Villa Kunterbunt_001_thumb.PNG', full: 'Die Villa Kunterbunt_001.PNG' },
-            { num: 2, thumb: 'Die Villa Kunterbunt_002_thumb.PNG', full: 'Die Villa Kunterbunt_002.PNG' },
-            { num: 3, thumb: 'Die Villa Kunterbunt_003_thumb.PNG', full: 'Die Villa Kunterbunt_003.PNG' },
-            { num: 4, thumb: 'Die Villa Kunterbunt_004_thumb.PNG', full: 'Die Villa Kunterbunt_004.PNG' },
-            { num: 5, thumb: 'Die Villa Kunterbunt_005_thumb.PNG', full: 'Die Villa Kunterbunt_005.PNG' },
-            { num: 6, thumb: 'Die Villa Kunterbunt_006_thumb.PNG', full: 'Die Villa Kunterbunt_006.PNG' },
-            { num: 7, thumb: 'Die Villa Kunterbunt_007_thumb.PNG', full: 'Die Villa Kunterbunt_007.PNG' },
-            { num: 8, thumb: 'Die Villa Kunterbunt_008_thumb.PNG', full: 'Die Villa Kunterbunt_008.PNG' },
-            { num: 9, thumb: 'Die Villa Kunterbunt_009_thumb.PNG', full: 'Die Villa Kunterbunt_009.PNG' },
-            { num: 10, thumb: 'Die Villa Kunterbunt_010_thumb.PNG', full: 'Die Villa Kunterbunt_010.PNG' },
-            { num: 11, thumb: 'Die Villa Kunterbunt_011_thumb.PNG', full: 'Die Villa Kunterbunt_011.PNG' },
-            { num: 12, thumb: 'Die Villa Kunterbunt_012_thumb.PNG', full: 'Die Villa Kunterbunt_012.PNG' },
-            { num: 13, thumb: 'Die Villa Kunterbunt_013_thumb.PNG', full: 'Die Villa Kunterbunt_013.PNG' },
-            { num: 14, thumb: 'Die Villa Kunterbunt_014_thumb.PNG', full: 'Die Villa Kunterbunt_014.PNG' },
-            { num: 15, thumb: 'Die Villa Kunterbunt_015_thumb.PNG', full: 'Die Villa Kunterbunt_015.PNG' },
-            { num: 16, thumb: 'Die Villa Kunterbunt_016_thumb.PNG', full: 'Die Villa Kunterbunt_016.PNG' },
-            { num: 17, thumb: 'Die Villa Kunterbunt_017_thumb.PNG', full: 'Die Villa Kunterbunt_017.PNG' },
-            { num: 18, thumb: 'Die Villa Kunterbunt_018_thumb.PNG', full: 'Die Villa Kunterbunt_018.PNG' },
-            { num: 19, thumb: 'Die Villa Kunterbunt_019_thumb.PNG', full: 'Die Villa Kunterbunt_019.PNG' },
-            { num: 20, thumb: 'Die Villa Kunterbunt_020_thumb.PNG', full: 'Die Villa Kunterbunt_020.PNG' },
-            { num: 21, thumb: 'Die Villa Kunterbunt_021_thumb.PNG', full: 'Die Villa Kunterbunt_021.PNG' },
-            { num: 22, thumb: 'Die Villa Kunterbunt_022_thumb.PNG', full: 'Die Villa Kunterbunt_022.PNG' },
-            { num: 23, thumb: 'Die Villa Kunterbunt_023_thumb.PNG', full: 'Die Villa Kunterbunt_023.PNG' },
-            { num: 24, thumb: 'Die Villa Kunterbunt_024_thumb.PNG', full: 'Die Villa Kunterbunt_024.PNG' },
-            { num: 25, thumb: 'Die Villa Kunterbunt_025_thumb.PNG', full: 'Die Villa Kunterbunt_025.PNG' },
-            { num: 26, thumb: 'Die Villa Kunterbunt_026_thumb.PNG', full: 'Die Villa Kunterbunt_026.PNG' },
-            { num: 27, thumb: 'Die Villa Kunterbunt_027_thumb.PNG', full: 'Die Villa Kunterbunt_027.PNG' },
-            { num: 28, thumb: 'Die Villa Kunterbunt_028_thumb.PNG', full: 'Die Villa Kunterbunt_028.PNG' },
-            { num: 29, thumb: 'Die Villa Kunterbunt_029_thumb.PNG', full: 'Die Villa Kunterbunt_029.PNG' },
-            { num: 30, thumb: 'Die Villa Kunterbunt_030_thumb.PNG', full: 'Die Villa Kunterbunt_030.PNG' },
-            { num: 31, thumb: 'Die Villa Kunterbunt_031_thumb.PNG', full: 'Die Villa Kunterbunt_031.PNG' },
-            { num: 32, thumb: 'Die Villa Kunterbunt_032_thumb.PNG', full: 'Die Villa Kunterbunt_032.PNG' },
-            { num: 33, thumb: 'Die Villa Kunterbunt_033_thumb.PNG', full: 'Die Villa Kunterbunt_033.PNG' },
-            { num: 34, thumb: 'Die Villa Kunterbunt_034_thumb.PNG', full: 'Die Villa Kunterbunt_034.PNG' },
-            { num: 35, thumb: 'Die Villa Kunterbunt_035_thumb.PNG', full: 'Die Villa Kunterbunt_035.PNG' },
-            { num: 36, thumb: 'Die Villa Kunterbunt_036_thumb.PNG', full: 'Die Villa Kunterbunt_036.PNG' },
-            { num: 37, thumb: 'Die Villa Kunterbunt_037_thumb.PNG', full: 'Die Villa Kunterbunt_037.PNG' },
-            { num: 38, thumb: 'Die Villa Kunterbunt_038_thumb.PNG', full: 'Die Villa Kunterbunt_038.PNG' },
-            { num: 39, thumb: 'Die Villa Kunterbunt_039_thumb.PNG', full: 'Die Villa Kunterbunt_039.PNG' },
-            { num: 40, thumb: 'Die Villa Kunterbunt_040_thumb.PNG', full: 'Die Villa Kunterbunt_040.PNG' }
+            { num: 1, thumb: 'villa_kunterbunt_001_thumb.png', full: 'villa_kunterbunt_001.png' },
+            { num: 2, thumb: 'villa_kunterbunt_002_thumb.png', full: 'villa_kunterbunt_002.png' },
+            { num: 3, thumb: 'villa_kunterbunt_003_thumb.png', full: 'villa_kunterbunt_003.png' },
+            { num: 4, thumb: 'villa_kunterbunt_004_thumb.png', full: 'villa_kunterbunt_004.png' },
+            { num: 5, thumb: 'villa_kunterbunt_005_thumb.png', full: 'villa_kunterbunt_005.png' },
+            { num: 6, thumb: 'villa_kunterbunt_006_thumb.png', full: 'villa_kunterbunt_006.png' },
+            { num: 7, thumb: 'villa_kunterbunt_007_thumb.png', full: 'villa_kunterbunt_007.png' },
+            { num: 8, thumb: 'villa_kunterbunt_008_thumb.png', full: 'villa_kunterbunt_008.png' },
+            { num: 9, thumb: 'villa_kunterbunt_009_thumb.png', full: 'villa_kunterbunt_009.png' },
+            { num: 10, thumb: 'villa_kunterbunt_010_thumb.png', full: 'villa_kunterbunt_010.png' },
+            { num: 11, thumb: 'villa_kunterbunt_011_thumb.png', full: 'villa_kunterbunt_011.png' },
+            { num: 12, thumb: 'villa_kunterbunt_012_thumb.png', full: 'villa_kunterbunt_012.png' },
+            { num: 13, thumb: 'villa_kunterbunt_013_thumb.png', full: 'villa_kunterbunt_013.png' },
+            { num: 14, thumb: 'villa_kunterbunt_014_thumb.png', full: 'villa_kunterbunt_014.png' },
+            { num: 15, thumb: 'villa_kunterbunt_015_thumb.png', full: 'villa_kunterbunt_015.png' },
+            { num: 16, thumb: 'villa_kunterbunt_016_thumb.png', full: 'villa_kunterbunt_016.png' },
+            { num: 17, thumb: 'villa_kunterbunt_017_thumb.png', full: 'villa_kunterbunt_017.png' },
+            { num: 18, thumb: 'villa_kunterbunt_018_thumb.png', full: 'villa_kunterbunt_018.png' },
+            { num: 19, thumb: 'villa_kunterbunt_019_thumb.png', full: 'villa_kunterbunt_019.png' },
+            { num: 20, thumb: 'villa_kunterbunt_020_thumb.png', full: 'villa_kunterbunt_020.png' },
+            { num: 21, thumb: 'villa_kunterbunt_021_thumb.png', full: 'villa_kunterbunt_021.png' },
+            { num: 22, thumb: 'villa_kunterbunt_022_thumb.png', full: 'villa_kunterbunt_022.png' },
+            { num: 23, thumb: 'villa_kunterbunt_023_thumb.png', full: 'villa_kunterbunt_023.png' },
+            { num: 24, thumb: 'villa_kunterbunt_024_thumb.png', full: 'villa_kunterbunt_024.png' },
+            { num: 25, thumb: 'villa_kunterbunt_025_thumb.png', full: 'villa_kunterbunt_025.png' },
+            { num: 26, thumb: 'villa_kunterbunt_026_thumb.png', full: 'villa_kunterbunt_026.png' },
+            { num: 27, thumb: 'villa_kunterbunt_027_thumb.png', full: 'villa_kunterbunt_027.png' },
+            { num: 28, thumb: 'villa_kunterbunt_028_thumb.png', full: 'villa_kunterbunt_028.png' },
+            { num: 29, thumb: 'villa_kunterbunt_029_thumb.png', full: 'villa_kunterbunt_029.png' },
+            { num: 30, thumb: 'villa_kunterbunt_030_thumb.png', full: 'villa_kunterbunt_030.png' },
+            { num: 31, thumb: 'villa_kunterbunt_031_thumb.png', full: 'villa_kunterbunt_031.png' },
+            { num: 32, thumb: 'villa_kunterbunt_032_thumb.png', full: 'villa_kunterbunt_032.png' },
+            { num: 33, thumb: 'villa_kunterbunt_033_thumb.png', full: 'villa_kunterbunt_033.png' },
+            { num: 34, thumb: 'villa_kunterbunt_034_thumb.png', full: 'villa_kunterbunt_034.png' },
+            { num: 35, thumb: 'villa_kunterbunt_035_thumb.png', full: 'villa_kunterbunt_035.png' },
+            { num: 36, thumb: 'villa_kunterbunt_036_thumb.png', full: 'villa_kunterbunt_036.png' },
+            { num: 37, thumb: 'villa_kunterbunt_037_thumb.png', full: 'villa_kunterbunt_037.png' },
+            { num: 38, thumb: 'villa_kunterbunt_038_thumb.png', full: 'villa_kunterbunt_038.png' },
+            { num: 39, thumb: 'villa_kunterbunt_039_thumb.png', full: 'villa_kunterbunt_039.png' },
+            { num: 40, thumb: 'villa_kunterbunt_040_thumb.png', full: 'villa_kunterbunt_040.png' }
         ];
 
         // State
