--- a/core/data/main/illustrations/gallery_table.html
+++ b/core/data/main/illustrations/gallery_table.html
@@ -1,60 +1,60 @@
 <table>
   <tr>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_001.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_002.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_003.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_004.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_001.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_002.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_003.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_004.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
   </tr>
   <tr>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_005.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_006.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_007.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_008.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_005.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_006.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_007.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_008.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
   </tr>
   <tr>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_009.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_010.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_011.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_012.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_009.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_010.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_011.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_012.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
   </tr>
   <tr>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_013.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_014.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_015.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_016.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_013.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_014.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_015.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_016.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
   </tr>
   <tr>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_017.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_018.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_019.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_020.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_017.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_018.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_019.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_020.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
   </tr>
   <tr>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_021.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_022.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_023.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_025.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_021.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_022.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_023.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_025.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
   </tr>
   <tr>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_026.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_027.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_028.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_029.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_026.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_027.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_028.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_029.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
   </tr>
   <tr>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_030.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_031.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_032.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_033.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_030.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_031.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_032.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_033.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
   </tr>
   <tr>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_034.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_035.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_036.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_037.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_034.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_035.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_036.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_037.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
   </tr>
   <tr>
-    <td width="25%" align="center"><img src="Die Villa Kunterbunt_038.PNG" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
+    <td width="25%" align="center"><img src="villa_kunterbunt_038.png" width="100%" style="border-radius: 10px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"></td>
     <td width="25%"></td>
     <td width="25%"></td>
     <td width="25%"></td>
