--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -47,7 +47,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png');
+            background-image: url('../assets/images/villa_kunterbunt_korrespondenz_epos_cover_front_hq_thumb.png');
             background-size: cover;
             background-position: center;
             filter: blur(60px) brightness(0.25) saturate(1.2);
@@ -381,7 +381,7 @@
 
             <!-- Episode 1 -->
             <article class="episode-card fade-in-up delay-1">
-                <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+                <img src="../assets/images/villa_kunterbunt_korrespondenz_epos_cover_front_hq_thumb.png"
                     alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 01</div>
@@ -408,7 +408,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-1" src="../assets/audio/Die Villa Kunterbunt – Satire.mp3"
+                    <audio id="audio-player-1" src="../assets/audio/villa_kunterbunt_satire.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
@@ -418,7 +418,7 @@
 
             <!-- Episode 2 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+                <img src="../assets/images/villa_kunterbunt_korrespondenz_epos_cover_front_hq_thumb.png"
                     alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 02</div>
@@ -444,7 +444,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-2" src="../assets/audio/Die Villa Kunterbunt - Analyse Podcast.mp3"
+                    <audio id="audio-player-2" src="../assets/audio/villa_kunterbunt_analyse_podcast.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
@@ -455,7 +455,7 @@
 
             <!-- Episode 3 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+                <img src="../assets/images/villa_kunterbunt_korrespondenz_epos_cover_front_hq_thumb.png"
                     alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 03</div>
@@ -481,7 +481,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-3" src="../assets/audio/Die Villa Kunterbunt - Dossier Podcast.mp3"
+                    <audio id="audio-player-3" src="../assets/audio/villa_kunterbunt_dossier_podcast.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
@@ -491,7 +491,7 @@
 
             <!-- Episode 4 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+                <img src="../assets/images/villa_kunterbunt_korrespondenz_epos_cover_front_hq_thumb.png"
                     alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 04</div>
@@ -517,7 +517,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-4" src="../assets/audio/Die Villa Kunterbunt – DeepDive.mp3"
+                    <audio id="audio-player-4" src="../assets/audio/villa_kunterbunt_deepdive.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
@@ -527,7 +527,7 @@
 
             <!-- Episode 5 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+                <img src="../assets/images/villa_kunterbunt_korrespondenz_epos_cover_front_hq_thumb.png"
                     alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 05</div>
@@ -553,7 +553,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-5" src="../assets/audio/Die Villa Kunterbunt – Zupftest.mp3"
+                    <audio id="audio-player-5" src="../assets/audio/villa_kunterbunt_zupftest.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
@@ -563,7 +563,7 @@
 
             <!-- Episode 6 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/Die Villa Kunterbunt - Korrespondez Epos Cover Front_HQ_thumb.png"
+                <img src="../assets/images/villa_kunterbunt_korrespondenz_epos_cover_front_hq_thumb.png"
                     alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 06</div>
@@ -589,7 +589,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-6" src="../assets/audio/Die Villa Kunterbunt – Die Studie.mp3"
+                    <audio id="audio-player-6" src="../assets/audio/villa_kunterbunt_die_studie.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
