--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:description"
         content="Eine satirische Odyssee durch die Welt der Phasenausfälle, des Remote-Voodoo und der Suche nach der verlorenen dritten Phase.">
     <meta property="og:image"
-        content="https://raw.githubusercontent.com/derlemue/villa-kunterbunt/main/core/data/main/images/Die%20Villa%20Kunterbunt%20-%20open-graph-template.png">
+        content="https://raw.githubusercontent.com/derlemue/villa-kunterbunt/main/core/data/main/images/villa_kunterbunt_open_graph_template.png">
     <meta name="twitter:card" content="summary_large_image">
 </head>
 
@@ -42,7 +42,7 @@
                     der verlorenen dritten Phase L3.
                 </p>
                 <div class="hero-buttons">
-                    <a href="core/data/main/documents/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf"
+                    <a href="core/data/main/documents/villa_kunterbunt_korrespondenz_epos_derlemue.pdf"
                         class="btn btn-primary" target="_blank">
                         📄 PDF lesen
                     </a>
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="core/data/main/images/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20Cover%20Front_HQ_thumb.png"
+                <img src="core/data/main/images/villa_kunterbunt_korrespondenz_epos_cover_front_hq_thumb.png"
                     alt="Villa Kunterbunt Cover">
             </div>
         </section>
@@ -127,7 +127,7 @@
                     <h3>Systemanalytische Studie</h3>
                     <p>Eine wissenschaftliche Bewertung des "Villa Kunterbunt" Phänomens als digitales Artefakt des
                         Widerstands.</p>
-                    <a href="core/data/main/documents/Die%20Villa%20Kunterbunt%20-%20Systemanalytische%20Studie%20und%20Bewertung.pdf"
+                    <a href="core/data/main/documents/villa_kunterbunt_systemanalytische_studie_und_bewertung.pdf"
                         class="btn btn-secondary">PDF öffnen →</a>
                 </div>
             </div>
@@ -141,9 +141,9 @@
                     <h3>Das Ebook</h3>
                     <p>Die vollständige Korrespondenz als hochwertiges PDF oder ePub.</p>
                     <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-                        <a href="core/data/main/documents/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.pdf"
+                        <a href="core/data/main/documents/villa_kunterbunt_korrespondenz_epos_derlemue.pdf"
                             class="btn btn-secondary">PDF</a>
-                        <a href="core/data/main/documents/Die%20Villa%20Kunterbunt%20-%20Korrespondez%20Epos%20-%20derlemue.epub"
+                        <a href="core/data/main/documents/villa_kunterbunt_korrespondenz_epos_derlemue.epub"
                             class="btn btn-secondary">ePub</a>
                     </div>
                 </div>
