Refactoring: Migrate website assets (thumbs) to core/website and update references

--- a/core/data/main/gallery/index.html
+++ b/core/data/main/gallery/index.html
@@ -415,7 +415,7 @@
         let currentIndex = 0;
         let isPlaying = false;
         let autoplayInterval = null;
-        const basePath = '../illustrations/';
+        const basePath = '../../../website/main/illustrations/';
         const selectedImages = new Set();
 
         // DOM Elements
