--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="bar"></div>
                 </div>
             </div>
-            <audio id="bg-music" loop muted autoplay>
+            <audio id="bg-music" loop autoplay>
                 <source src="core/website/global/audio/villa_kunterbunt_background_melody.mp3" type="audio/mpeg">
             </audio>
             <div class="nav-links">
