--- a/index.html
+++ b/index.html
@@ -24,20 +24,23 @@
     <header>
         <nav>
             <div class="logo">🎪 Villa Kunterbunt</div>
-            <div class="audio-controls">
-                <button id="toggle-audio" class="btn-icon" aria-label="Play/Pause">
-                    <span id="icon-play">▶️</span>
-                    <span id="icon-pause" style="display:none;">⏸️</span>
-                </button>
-                <button id="toggle-mute" class="btn-icon" aria-label="Mute/Unmute">
-                    <span id="icon-sound">🔊</span>
-                    <span id="icon-mute" style="display:none;">🔇</span>
-                </button>
-                <div class="waveform" id="waveform">
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                    <div class="bar"></div>
+            <div class="audio-wrapper">
+                <button id="toggle-player" class="btn-icon" aria-label="Toggle Player">🎵</button>
+                <div class="audio-controls" id="audio-controls">
+                    <button id="toggle-audio" class="btn-icon" aria-label="Play/Pause">
+                        <span id="icon-play">▶️</span>
+                        <span id="icon-pause" style="display:none;">⏸️</span>
+                    </button>
+                    <button id="toggle-mute" class="btn-icon" aria-label="Mute/Unmute">
+                        <span id="icon-sound">🔊</span>
+                        <span id="icon-mute" style="display:none;">🔇</span>
+                    </button>
+                    <div class="waveform" id="waveform">
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                    </div>
                 </div>
             </div>
             <audio id="bg-music" loop autoplay>
@@ -238,11 +241,19 @@
                 updateMuteState(audio.muted);
             });
 
+            const togglePlayerBtn = document.getElementById('toggle-player');
+            const audioWrapper = document.querySelector('.audio-wrapper');
+
+            togglePlayerBtn.addEventListener('click', () => {
+                audioWrapper.classList.toggle('expanded');
+            });
+
             function updatePlayState(isPlaying) {
                 if (isPlaying) {
                     iconPlay.style.display = 'none';
                     iconPause.style.display = 'inline';
                     waveform.classList.add('playing');
+                    audioWrapper.classList.add('expanded'); // Auto-expand on play
                 } else {
                     iconPlay.style.display = 'inline';
                     iconPause.style.display = 'none';
