--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
             </div>
-            <audio id="bg-music" loop autoplay>
+            <audio id="bg-music" autoplay>
                 <source src="core/website/global/audio/villa_kunterbunt_background_melody.mp3" type="audio/mpeg">
             </audio>
             <div class="nav-links">
@@ -213,7 +213,7 @@
             const iconSound = document.getElementById('icon-sound');
             const iconMute = document.getElementById('icon-mute');
 
-            audio.volume = 0.9;
+            audio.volume = 0.7;
 
             // Autoplay handling
             const playPromise = audio.play();
